# esp-idf-sc

./: README.md  sdkconfig
components/smooth/: CMakeLists.txt
components/smooth-core/: CMakeLists.txt  Kconfig
components/smooth-core/include/smooth/core/: Application.h
components/smooth-core/src/core/: Application.cpp
components/smooth-extra/: CMakeLists.txt  Kconfig
components/smooth/diagrams/: ipc.mmd
components/smooth/diagrams/src/: ipc.plantuml
components/smooth/include/smooth/core/: Application.h  SystemStatistics.h  Task.h
components/smooth/include/smooth/core/ipc/: QueueNotification.h  TaskEventQueue.h
components/smooth/include/smooth/core/timer/: ElapsedTime.h
components/smooth/include/smooth/core/util/: create_protected.h
components/smooth/src/core/: Application.cpp  SystemStatistics.cpp  Task.cpp
components/smooth/src/core/ipc/: QueueNotification.cpp
components/smooth/src/core/timer/: ElapsedTime.cpp
main/: CMakeLists.txt  main.cpp
main/example/fmt/: CMakeLists.txt
main/example/lorawan/: CMakeLists.txt  SCExampleLorawanTask.cpp
main/example/njson/: CMakeLists.txt
main/example/simpletask/: CMakeLists.txt
main/example/starter_example/: CMakeLists.txt  starter_example.cpp
main/example/task_event_queue/: CMakeLists.txt  task_event_queue.cpp  task_event_queue.h
